css/main.css
@import url(http://fonts.googleapis.com/css?family=Droid+Serif:400,400italic,700,700italic);
@import url(http://fonts.googleapis.com/css?family=Droid+Sans+Mono);

* {
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
}

/* ensure font stack is respected everywhere */
html, button, input, select, textarea,
.pure-g [class *= "pure-u"],
.pure-g-r [class *= "pure-u"] {
    font-family: 'Droid Serif', serif;
    font-size: 18px;
}

code {
    border: 1px solid #999;
    background-color: #1B1D1E;
    padding: 0 0.2em;
}

pre {
    font-family: 'Droid Sans Mono', monospace !important;
    border: 1px solid #999;
    padding: 0.5em;
}

pre code {
    border: none;
}

blockquote {
    line-height: 1.5em;
}

blockquote::before {
    font-size: 2em;
    content: "\“";
    display: block;
}

h1, h2, h3, h4, h5, h6 {
    text-shadow: 1px 1px black;
}

a           { text-decoration: none }
a           { color: #2277CC; }
#title > a:hover,
a:hover     { color: #CC2277; }
a:visited   { color: #7722CC; }

p,
li {
    line-height: 1.8em;
}

#content,
#footer {
    margin: 1em auto;
    max-width: 40em;
}

#header {
    text-align: center;
    font-weight: bold;
}

#title {
    font-size: 3em;
    padding: 0;
    text-shadow: black 2px 2px;
}

#title::before {
    content: "« ";
}

#title::after {
    content: " »";
}

#title > a {
    color: inherit;
}

#content {
    text-align: justify;
    padding: 0.5em;
}

.meta {
    color: #aaa;
}

#footer {
    font-size: 0.8em;
    color: #999;
    padding: 0.5em;
    border-top: 1px dashed #F0F5FA;
}

#footer a {
    color: #2277CC;
}

/* horizontal lists */
ul.list-horizontal {
    list-style: none;
    text-align: center;
    padding: 0;
    margin: 0;
}

ul.list-horizontal li {
    display: inline;
}

ul.list-horizontal li::after {
    content: ' ∞ ';
}

ul.list-horizontal li:last-of-type::after {
    content: '';
}

/* posts */
.posts {
    list-style-type: none;
}

.posts .post-date::after {
    content: " ⇀ ";
}

